--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Blog Title"
+title: "IMOC Pro"
 author: "Blog Author"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
@@ -11,7 +11,7 @@ date_format: "%B %d, %Y"
 show_social: true          # show site description and social links in the footer
 show_excerpts: true        # show article excerpts on the home page
 show_frame: true           # adds a gray frame to the site
-show_sidebar: false        # show a sidebar instead of the usual header
+show_sidebar: true        # show a sidebar instead of the usual header
 
 # Menu
 
@@ -20,9 +20,9 @@ navigation:
   - {file: "README.md", icon: address-card}
 
 external:                  # see http://fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "mailto:imoc2pro@gmail.com"}
+  - {title: Wikidot, icon: external-link, url: "http://imocamp.wikidot.com/"}
+  # - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
