--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navigation:
 external:                  # see http://fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:imoc2pro@gmail.com"}
   - {title: Wikidot, icon: flag, url: "http://imocamp.wikidot.com/"}
-  # - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: PDF, icon: file, url: "/A.pdf"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
