--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ external:                  # see http://fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:imoc2pro@gmail.com"}
   - {title: Wikidot, icon: flag, url: "http://imocamp.wikidot.com/"}
   - {title: PDF, icon: file, url: "/A.pdf"}
+  - {title: PDF, icon: file, url: "https://lii4.github.io/Conic.pdf"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
